[COLAB-2761] Fix alignment of profile table

--- a/view/src/main/resources/static/sass/partials/pages/_community.scss
+++ b/view/src/main/resources/static/sass/partials/pages/_community.scss
@@ -102,11 +102,6 @@ $p-community__infoLeft__span__fontWeight: $t-Typography__fontWeight--bold !defau
   margin-top: 0;
 }
 
-.comm_member table.colab.otherInfo {
-  margin-top: 0;
-  width: 300px;
-}
-
 .member table.colab {
   width: 100%;
   margin-top: 0;
